Fix: search place coordinates in edit_place popup not showing all text.

--- a/css-1.5.2/style.css
+++ b/css-1.5.2/style.css
@@ -1369,7 +1369,7 @@ body .ui-tooltip {border-width: 2px}
 
 /* Pedigree map page */
 #iwcontent_edit img{margin:4px !important}
-.iwstyle {color:#272727;font-size:10px}
+.iwstyle {color:#272727;font-size:10px;line-height: 1.4em;}
 .iwstyle .date {font-size:10px}
 .iwstyle a {color:#272727 !important; font-weight:bold}
 .iwstyle a:hover {color:#dd6900 !important}
